# philharmonic-connector-impl-vector-search

./: CHANGELOG.md  Cargo.toml  README.md
src/: config.rs  error.rs  lib.rs  request.rs  response.rs  search.rs
tests/: error_cases.rs  happy_path.rs  helpers.rs  large_corpus.rs  score_threshold.rs  top_k_behavior.rs
tests/fixtures/: corpus_5items.json  query_simple.json  request_happy_top3.json
