[package]
name = "philharmonic-connector-impl-vector-search"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0 OR MPL-2.0"
repository = "https://github.com/metastable-void/philharmonic-connector-impl-vector-search"
description = "Placeholder. Part of the Philharmonic workspace."

[dependencies]
