[package]
name = "philharmonic-connector-impl-vector-search"
version = "0.0.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0 OR MPL-2.0"
readme = "README.md"
repository = "https://github.com/metastable-void/philharmonic-connector-impl-vector-search"
description = "Vector-search connector implementation for Philharmonic (vector_search capability)."

[dependencies]

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
