[package]
name = "philharmonic-connector-impl-vector-search"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0 OR MPL-2.0"
readme = "README.md"
repository = "https://github.com/metastable-void/philharmonic-connector-impl-vector-search"
description = "Vector-search connector implementation for Philharmonic (vector_search capability)."

[dependencies]
async-trait = "0.1"
philharmonic-connector-common = "0.2"
philharmonic-connector-impl-api = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "macros", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "time", "test-util"] }

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
overflow-checks = true
